--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "covidwebsite",
+  "name": "mywebsite",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.1",
+    "react-tsparticles": "^1.23.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
